--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lead-tracker-extension",
-  "description": "Simple extension for lead tracking",
+  "name": "Scrim-s01ua9r",
+  "description": "https://scrimba.com/frontend-path-c0j/~08q",
   "scripts": {
     "start": "vite",
     "dev": "vite",
